...
      fontFamily = openSansExtraBold
    )
    Spacer(modifier = Modifier.height(35.dp))
    // Input Fields
    CustomTextField(
      value = email,
      testTag = "email_field",
      hint = stringResource(id = R.string.email_hint),
      icon = R.drawable.ic_email,
      onValueChanged = onEmailChanged
    )
    CustomTextField(
      value = password,
      testTag = "password_field",
      hint = stringResource(id = R.string.password_hint),
      icon = R.drawable.ic_password1, onValueChanged = onPasswordChanged
    )
    Spacer(modifier = Modifier.height(16.dp))
    LogInButton(isLoading, buttonClicked)
    Spacer(modifier = Modifier.height(5.dp))
...
