...
    <string name="letsgo_button">Lets go 🚀</string>

    <!--     Log in Screen-->
    <string name="login_headline">Log In</string>
    <string name="login_subheadline">Please enter details below</string>

    <string name="login_button">LOG IN</string>
    <string name="signup_sentence">Create new account ?</string>
    <string name="signup">Sign up</string>


    <!--    Review Screen-->

...
